@@ -1,6 +1,7 @@
 package org.jeesl.controller.handler.tuple;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -42,9 +43,12 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 	public Map<A,Map<B,JsonTuple2<A,B>>> getMap2() {return map;} //Deprecated
 	public Map<A,Map<B,JsonTuple2<A,B>>> getMapB() {return map;}
 	
+	private Map<A,Map<B,List<JsonTuple2<A,B>>>> mapListB; public Map<A,Map<B,List<JsonTuple2<A,B>>>> getMapListB() {return mapListB;}
+	
 	private final List<B> listB; public List<B> getListB() {return listB;}
 	private final List<JsonTuple2<A,B>> tuples2; public List<JsonTuple2<A,B>> getTuples2() {return tuples2;}
 	
+	private boolean withList; public JsonTuple2Handler<A,B> withList(boolean value) {this.withList=value; return this;}
 	private int sizeB; public int getSizeB() {return sizeB;}
 	
 	public static <A extends EjbWithId, B extends EjbWithId> JsonTuple2Handler<A,B> instance(Class<A> cA, Class<B> cB) {return new JsonTuple2Handler<>(cA,cB);}
@@ -70,56 +74,11 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 	}
 	public void clearFrom(A a)
 	{
-//		super.
 		if(mapA.containsKey(a.getId())) {mapA.remove(a.getId());}
 		if(map.containsKey(a)) {map.remove(a);}
 	}
-
-	public void init(JsonTuples2<A,B> tuples, JeeslFacade fUtils, boolean loadA, boolean loadB)
-	{
-		clear();
-		Set<Long> setIdA = new HashSet<>();
-		Set<Long> setIdB = new HashSet<>();
-		
-		for(JsonTuple2<A,B> t : tuples.getTuples())
-		{
-			setIdA.add(t.getId1());
-			setIdB.add(t.getId2());
-		}
-		
-		Map<Long,A> mapA = null;
-		Map<Long,B> mapB = null; 
-		
-		if(loadA) {mapA = EjbIdFactory.toIdMap(fUtils.find(cA, setIdA));}
-		if(loadB) {mapB = EjbIdFactory.toIdMap(fUtils.find(cB, setIdB));}
-		
-		for(JsonTuple2<A,B> t : tuples.getTuples())
-		{
-			try
-			{
-				if(loadA){t.setEjb1(mapA.get(t.getId1()));}
-				else
-				{
-					A a = cA.newInstance();
-					a.setId(t.getId1());
-					t.setEjb1(a);
-				}
-				
-				if(loadB){t.setEjb2(mapB.get(t.getId2()));}
-				else
-				{
-					B b = cB.newInstance();
-					b.setId(t.getId2());
-					t.setEjb2(b);
-				}
-			}
-			catch (InstantiationException e) {e.printStackTrace();}
-			catch (IllegalAccessException e) {e.printStackTrace();}
-		}
-		init(tuples);
-		
-	}
-	public JsonTuple2Handler<A,B> init(JsonTuples2<A,B> tuples)
+	
+	public JsonTuple2Handler<A,B> load(JsonTuples2<A,B> tuples)
 	{
 		this.clear();
 		this.append(tuples);
@@ -147,8 +106,8 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 					if(mapA.containsKey(t.getId1())) {t.setEjb1(mapA.get(t.getId1()));}
 					else
 					{
-						try{t.setEjb1(cA.newInstance()); t.getEjb1().setId(t.getId1());}
-						catch (InstantiationException | IllegalAccessException e) {e.printStackTrace();}
+						try{t.setEjb1(cA.getDeclaredConstructor().newInstance()); t.getEjb1().setId(t.getId1());}
+						catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {e.printStackTrace();}
 					}
 				}
 				if(t.getEjb2()==null)
@@ -158,8 +117,8 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 					{
 						if(t.getId2()!=null)
 						{
-							try{t.setEjb2(cB.newInstance()); t.getEjb2().setId(t.getId2());}
-							catch (InstantiationException | IllegalAccessException e) {e.printStackTrace();}
+							try{t.setEjb2(cB.getDeclaredConstructor().newInstance()); t.getEjb2().setId(t.getId2());}
+							catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {e.printStackTrace();}
 						}
 					}
 				}
@@ -167,10 +126,66 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 				if(!mapA.containsKey(t.getId1())) {mapA.put(t.getId1(),t.getEjb1());}
 				if(!mapB.containsKey(t.getId2())) {mapB.put(t.getId2(),t.getEjb2());}
 				
-				if(!map.containsKey(t.getEjb1())) {map.put(t.getEjb1(), new HashMap<B,JsonTuple2<A,B>>());}
+				if(!map.containsKey(t.getEjb1())) {map.put(t.getEjb1(), new HashMap<>());}
 				map.get(t.getEjb1()).put(t.getEjb2(), t);
+				
+				if(withList)
+				{
+					if(Objects.isNull(mapListB)) {mapListB = new HashMap<>();}
+					if(!mapListB.containsKey(t.getEjb1())) {mapListB.put(t.getEjb1(), new HashMap<>());}
+					if(!mapListB.get(t.getEjb1()).containsKey(t.getEjb2())) {mapListB.get(t.getEjb1()).put(t.getEjb2(), new ArrayList<>());}
+					mapListB.get(t.getEjb1()).get(t.getEjb2()).add(t);
+				}
 			}
 		}
+	}
+	
+	public void init(JsonTuples2<A,B> tuples, JeeslFacade fUtils, boolean loadA, boolean loadB)
+	{
+		clear();
+		Set<Long> setIdA = new HashSet<>();
+		Set<Long> setIdB = new HashSet<>();
+		
+		for(JsonTuple2<A,B> t : tuples.getTuples())
+		{
+			setIdA.add(t.getId1());
+			setIdB.add(t.getId2());
+		}
+		
+		Map<Long,A> mapA = null;
+		Map<Long,B> mapB = null; 
+		
+		if(loadA) {mapA = EjbIdFactory.toIdMap(fUtils.find(cA, setIdA));}
+		if(loadB) {mapB = EjbIdFactory.toIdMap(fUtils.find(cB, setIdB));}
+		
+		for(JsonTuple2<A,B> t : tuples.getTuples())
+		{
+			try
+			{
+				if(loadA){t.setEjb1(mapA.get(t.getId1()));}
+				else
+				{
+					A a = cA.getDeclaredConstructor().newInstance();
+					a.setId(t.getId1());
+					t.setEjb1(a);
+				}
+				
+				if(loadB){t.setEjb2(mapB.get(t.getId2()));}
+				else
+				{
+					B b = cB.getDeclaredConstructor().newInstance();
+					b.setId(t.getId2());
+					t.setEjb2(b);
+				}
+			}
+			catch (InstantiationException e) {e.printStackTrace();}
+			catch (IllegalAccessException e) {e.printStackTrace();}
+			catch (IllegalArgumentException e) {e.printStackTrace();}
+			catch (InvocationTargetException e) {e.printStackTrace();}
+			catch (NoSuchMethodException e) {e.printStackTrace();}
+			catch (SecurityException e) {e.printStackTrace();}
+		}
+		load(tuples);
 	}
 	
 	protected void initTupleB(JsonTuple2<A,B> t)
@@ -180,8 +195,8 @@ public class JsonTuple2Handler <A extends EjbWithId, B extends EjbWithId>
 			if(mapB.containsKey(t.getId2())) {t.setEjb2(mapB.get(t.getId2()));}
 			else
 			{
-				try{t.setEjb2(cB.newInstance()); t.getEjb2().setId(t.getId2());}
-				catch (InstantiationException | IllegalAccessException e) {e.printStackTrace();}
+				try{t.setEjb2(cB.getDeclaredConstructor().newInstance()); t.getEjb2().setId(t.getId2());}
+				catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {e.printStackTrace();}
 			}
 		}
 		if(!mapB.containsKey(t.getId2())) {mapB.put(t.getId2(),t.getEjb2());}
